[package]
name = "rustmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
color-print = "0.3.5"
async-std = {version = "1.12.0", features = ["attributes"]}
